# indexer-engine

./: .gitignore  LICENSE  Makefile  SECURITY.md  alembic.ini  pyproject.toml
docs/: architecture.md
indexer_engine/alembic/: env.py
indexer_engine/alembic/versions/: 2025_12_27_104444_init_database.py  2025_12_29_154527_add_evm_event_logs_table.py  2026_01_01_231956_add_evm_event_logs_table.py  2026_01_05_111332_add_analytics_table.py  2026_01_05_122031_add_event_signatures_table.py  2026_01_06_140126_add_blocks_table.py  2026_01_16_203614_add_topics_and_data_to_evm_events.py  2026_01_16_212529_add_uniswap_v4_wallet_swaps.py  2026_01_19_203916_remove_reciepient_column.py  2026_01_21_232141_add_timestamp_to_wallet_swaps.py  2026_01_27_095808_add_pools_and_tokens_tables.py
indexer_engine/app/: config.py
indexer_engine/app/application/services/: index_analytics_evm_events_for_block_range.py  index_evm_event_logs_for_block_range.py  index_staging_evm_event_logs_for_block_range.py
indexer_engine/app/domain/ports/: out.py
indexer_engine/app/infrastructure/adapters/: analytics_evm_events_indexer.py  staging_evm_event_logs_indexer.py
indexer_engine/app/infrastructure/db/: db_base.py  engine.py
indexer_engine/app/infrastructure/factories/: analytics_evm_events_indexer_factory.py  evm_event_logs_indexer_factory.py  staging_evm_event_logs_indexer_factory.py
indexer_engine/app/infrastructure/fetchers/: erc20_tokens_fetcher.py
indexer_engine/app/interface/cli/: __main__.py
indexer_engine/notebooks/: analytics.ipynb
scripts/: seed_event_signatures.py
(+33 files in other folders)
